...
                android:text="Model"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:translationX="5dp" />

            <TextView
                android:id="@+id/modelTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="no model selected"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/modelImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="#00FFFFFF"
                android:scaleType="center"
                android:scaleX="0.7"
...
                android:text="Tokenizer"
                android:textColor="#FDFDFD"
                android:textSize="16sp"
                android:translationX="5dp" />

            <TextView
                android:id="@+id/tokenizerTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="no tokenizer selected"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/tokenizerImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="#00FFFFFF"
                android:scaleX="0.7"
                android:scaleY="0.7"
...
                android:scaleY="0.7"
                android:src="@drawable/expand_circle_down" />

        </LinearLayout>

        <Button
            android:id="@+id/loadModelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp"
            android:text="Load Model"
...
