...
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:paddingTop="20dp"
            android:src="@drawable/baseline_article_24" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@android:color/transparent"
            android:paddingTop="20dp"
            android:src="@drawable/baseline_settings_24" />
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/messages_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/chat_background"
            android:divider="#fff"
            android:stackFromBottom="true"
...
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/baseline_lightbulb_24" />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="2"
                android:background="@drawable/input_text_shape"
                android:ems="8"
                android:inputType="text"
...
                android:text=""
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:translationY="5dp" />

            <ImageButton
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/baseline_send_24" />
        </LinearLayout>
...
